# interview-problem-quality

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  context-manifest.yaml  pyproject.toml
.kiro/steering/: interview-problem-quality.md
agents/: openai.yaml
examples/: good-problem.json  week3-report-example.md
prompts/: constraint-reviewer.md  hint-leakage-reviewer.md  human-review-assistant.md  merge-review-findings.md  originality-reviewer.md  pattern-designer.md  problem-author.md  revision-agent.md  senior-roi-reviewer.md  source-similarity-reviewer.md  test-breaker.md
references/: adversarial-review-rubric.md  canonical-solution-rules.md  hint-rules.md  human-review-rubric.md  lifecycle.md  problem-schema.md  senior-roi-patterns.md  source-use-policy.md  test-design-rules.md  week3-report-template.md
scripts/: export_review_packet.py  summarize_curriculum.py  validate_problem_json.py
tests/: test_packet_scripts.py  test_validate_problem_json.py
